--- a/fighting_game/index.html
+++ b/fighting_game/index.html
@@ -19,7 +19,10 @@
         </div>
       </div>
       <!-- timer -->
-      <div style="background-color: red; height: 100px; width: 100px; flex-shrink: 0;"></div>
+      <div id="timer"
+        style="background-color: red; height: 100px; width: 100px; flex-shrink: 0; display: flex; align-items: center; justify-content: center;">
+        10
+      </div>
       <!-- enemy health -->
       <div style="position: relative; height: 30px; width: 100%;">
         <div style="background-color: yellow; height: 30px;">
@@ -27,9 +30,11 @@
         <div id="enemyHealth" style="position: absolute; background: blue; top: 0; left: 0; bottom: 0; right: 0;"></div>
       </div>
     </div>
-
+    <div id="displayText" style= "position: absolute; color: white; align-items: center; justify-content: center; top: 0; left: 0; bottom: 0; right: 0; display: none">Tie</div>
     <canvas></canvas>
   </div>
 
+  <script src="js/utils.js"></script>
+  <script src="js/classes.js"></script>
   <script src="index.js"></script>
 </body>
